--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ruby on Rails: Welcome aboard</title>
+    <title>C&oacute;digo Secreto</title>
     <style type="text/css" media="screen">
       body {
         margin: 0;
@@ -174,6 +174,8 @@
   </head>
   <body>
     <a href="/game/new">Start a new game</a>
+    <a href="/user/login">Login</a>
+
 
 
   </body>
