Added admin and session controllers - Corresponding feature for users (actually loggin in only) - Creating sessions
Todo:
Limiting access to logged in users

--- a/public/index.html
+++ b/public/index.html
@@ -174,7 +174,7 @@
   </head>
   <body>
     <a href="/game/new">Start a new game</a>
-    <a href="/user/login">Login</a>
+    <a href="/login">Login</a>
 
 
 
